--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 AllTheStacks.xcodeproj/project.xcworkspace/xcshareddata
 AllTheStacks.xcodeproj/xcuserdata/adamahrens.xcuserdatad/xcdebugger
+
+.DS_Store
+AllTheStacks.xcodeproj/project.xcworkspace/xcuserdata/MikeDave.xcuserdatad/
+AllTheStacks.xcodeproj/xcuserdata/MikeDave.xcuserdatad/
+
+
