Only saving in CoreData if it doesn't exisit

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ AllTheStacks.xcodeproj/project.xcworkspace/xcuserdata/MikeDave.xcuserdatad/
 AllTheStacks.xcodeproj/xcuserdata/MikeDave.xcuserdatad/
 
 
+AllTheStacks.xcodeproj/project.xcworkspace/xcuserdata/adamahrens.xcuserdatad/UserInterfaceState.xcuserstate
