--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ AllTheStacks.xcodeproj/xcuserdata/MikeDave.xcuserdatad/
 
 
 AllTheStacks.xcodeproj/project.xcworkspace/xcuserdata/adamahrens.xcuserdatad/UserInterfaceState.xcuserstate
+AllTheStacks/FlickrAPI.plist
